--- a/package.json
+++ b/package.json
@@ -12,7 +12,11 @@
     "devDependencies": {
       "jest": "^29.0.0",
       "jsdom": "^22.0.0",
+      "jest-environment-jsdom": "^29.0.0", 
       "http-server": "^14.1.1",
       "fs-extra": "^11.1.0"
+    },
+    "jest": {
+      "testEnvironment": "jsdom"
     }
   }
