--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -44,12 +44,12 @@ jobs:
 
     - name: Replace Configuration
       run: |
-        sed -i 's/#{GITHUB_NAME}#/${{ secrets.GITHUB_NAME }}/g' dist/js/config.js
-        sed -i 's/#{GITHUB_TITLE}#/${{ secrets.GITHUB_TITLE }}/g' dist/js/config.js
-        sed -i 's/#{GITHUB_BIO}#/${{ secrets.GITHUB_BIO }}/g' dist/js/config.js
-        sed -i 's/#{GITHUB_LOCATION}#/${{ secrets.GITHUB_LOCATION }}/g' dist/js/config.js
-        sed -i 's/#{GITHUB_EMAIL}#/${{ secrets.GITHUB_EMAIL }}/g' dist/js/config.js
-        sed -i 's/#{GITHUB_IMAGE}#/${{ secrets.GITHUB_IMAGE }}/g' dist/js/config.js
+        sed -i 's/#{GITHUB_NAME}#/${{ secrets.USER_NAME }}/g' dist/js/config.js
+        sed -i 's/#{GITHUB_TITLE}#/${{ secrets.TITLE }}/g' dist/js/config.js
+        sed -i 's/#{GITHUB_BIO}#/${{ secrets.BIO }}/g' dist/js/config.js
+        sed -i 's/#{GITHUB_LOCATION}#/${{ secrets.LOCATION }}/g' dist/js/config.js
+        sed -i 's/#{GITHUB_EMAIL}#/${{ secrets.EMAIL }}/g' dist/js/config.js
+        sed -i 's/#{GITHUB_IMAGE}#/${{ secrets.IMAGE }}/g' dist/js/config.js
       
     - name: Upload artifact
       uses: actions/upload-pages-artifact@v3
